# spdlib

./: CMakeLists.txt  README.md
doc/: Doxyfile.in  GapFraction.xml  MeanIntensity.xml  SPDMetrics.xml  index.txt
doc/dox_files/: index.dox.in
examples/BlockProcessor/inSPDOutImage/: build.sh  main.cpp
examples/BlockProcessor/inSPDinImageoutSPD/: CMakeLists.txt  build.sh  main.cpp
examples/BlockProcessor/inSPDnoOut/: CMakeLists.txt  main.cpp
examples/BlockProcessor/inSPDoutSPD/: CMakeLists.txt  main.cpp
idl/: spd_get_block.pro  spd_init_header.pro  spd_init_pointdata.pro  spd_init_pulsedata.pro  spd_read_data_row.pro  spd_read_header.pro  spd_read_test.pro  spd_read_unsorteddata.pro
include/: spd-config.h.in
include/spd/: SPDARADecomposedDatFileImporter.h  SPDASCIIMultiLineReader.h  SPDApplyElevationChange.h  SPDCalcFileStats.h  SPDCalcMetrics.h  SPDClassifyPts.h  SPDCommon.h  SPDConvertFormats.h  SPDCopyRemovingClassificationProcessor.h  SPDCreateVerticalProfiles.h  SPDDataBlockProcessor.h  SPDDataExporter.h  SPDDataImporter.h  SPDDecomposeWaveforms.h  SPDDecomposedCOOFileImporter.h  SPDDecomposedDatFileImporter.h  SPDDefineClassesFromImg.h  SPDDefinePulseHeights.h  SPDDefineRGBValues.h  SPDException.h  SPDExportAsReadUnGridded.h  SPDExportAsTiles.h  SPDExportProcessorSubset.h  SPDExtractReturns.h  SPDFile.h  SPDFileIncrementalReader.h  SPDFileReader.h  SPDFileUtilities.h  SPDFileWriter.h  SPDFullWaveformDatFileImporter.h  SPDGenBinaryMask.h  SPDGeneralASCIIFileWriter.h  SPDGenerateTiles.h  SPDGridData.h  SPDIOException.h  SPDIOFactory.h  SPDIOUtils.h  SPDImageException.h  SPDImageUtils.h  SPDImportSALCAData2SPD.h  (+37 more)
include/spd/alglibspd/: alglibinternal.h  alglibmisc.h  ap.h  integration.h  interpolation.h  linalg.h  optimization.h  solvers.h  specialfunctions.h
include/spd/cmpfit/: README.txt  mpfit.h
include/spd/nn/: config.h  delaunay.h  hash.h  istack.h  minell.h  nan.h  nn.h  nn_internal.h  performNNInterp.h  preader.h  triangle.h  version.h
include/spd/tclap/: Arg.h  ArgException.h  CmdLine.h  DocBookOutput.h  HelpVisitor.h  IgnoreRestVisitor.h  MultiArg.h  MultiSwitchArg.h  StdOutput.h  SwitchArg.h  UnlabeledMultiArg.h  UnlabeledValueArg.h  ValueArg.h  ValuesConstraint.h  VersionVisitor.h  XorHandler.h  ZshCompletionOutput.h
include/spd/tps/: linalg3d.h  spline.h  (+1 more)
ngpython/: README.txt  pointarray.cpp  pointarray.h  pulsearray.cpp  pulsearray.h  pyspdfile.cpp  pyspdfile.h  recarray.cpp  recarray.h  setup.py  spdpy2module.cpp  test.py
ngpython/spdpy2/: __init__.py  spdapplier.py
ngpython/src/: pointarray.cpp  pointarray.h  pulsearray.cpp  pulsearray.h  pyspdfile.cpp  pyspdfile.h  recarray.cpp  recarray.h  spdpy2module.cpp
ngpython/tests/: inSPDinImageoutSPD.py  inSPDnoOut.py  inSPDoutImage.py  inSPDoutImage_waveform.py  inSPDoutSPD.py  inSPDoutSPD_delete.py  test.py  testReadBlock.py
python/: CMakeLists.txt  createNewSPDFile.py  spdpy.cpp  spdpy_common.h  spdpy_docs.h  spdpy_spdwriter.h  spdpy_test.py  spdpy_testcopy.py  spdpy_updwriter.h
python/importers/: DART2UPD.py  LASWave2UPD.py  RiScanDAT2UPD.py  SingleASCIIWave2UPD.py  geolas2spd.py  geolasgcw2spd.py  tew2spd.py
python/tools/: spdPlotPulses.py  spdPrintPulses.py
schemas/: isitepts.xml  pts.xml  xyz.xml  xyzi.xml  xyzrgb.xml
src/: CMakeLists.txt
src/alglibspd/: alglibinternal.cpp  alglibmisc.cpp  ap.cpp  integration.cpp  interpolation.cpp  linalg.cpp  optimization.cpp  solvers.cpp  specialfunctions.cpp
src/cmpfit/: mpfit.c
src/exe/spdclassify/: main.cpp
src/exe/spdclassimg/: main.cpp
src/exe/spdclearclass/: main.cpp
src/exe/spdcopy/: main.cpp
src/exe/spddecomp/: main.cpp
src/exe/spddefheight/: main.cpp
src/exe/spddefrgb/: main.cpp
src/exe/spddeftiles/: main.cpp
src/exe/spdelevation/: main.cpp
src/exe/spdextract/: main.cpp
src/exe/spdgrdtidy/: main.cpp
src/exe/spdinfo/: main.cpp
src/exe/spdinterp/: main.cpp
src/exe/spdlastest/: main.cpp
src/exe/spdmaskgen/: main.cpp
src/exe/spdmccgrd/: main.cpp
src/exe/spdmerge/: main.cpp
src/exe/spdmetrics/: main.cpp
src/exe/spdoverlap/: main.cpp
src/exe/spdpffgrd/: main.cpp
src/exe/spdpmfgrd/: main.cpp
src/exe/spdpolygrd/: main.cpp
src/exe/spdprofile/: main.cpp
src/exe/spdproj/: main.cpp
src/exe/spdrmnoise/: main.cpp
src/exe/spdsplit/: main.cpp
src/exe/spdstats/: main.cpp
src/exe/spdsubset/: main.cpp
src/exe/spdthin/: main.cpp
src/exe/spdtileimg/: main.cpp
src/exe/spdtiling/: main.cpp
src/exe/spdtranslate/: main.cpp
src/exe/spdtsample/: main.cpp
src/exe/spdversion/: main.cpp
src/exe/spdwarp/: main.cpp
src/exe/test/: main.cpp
src/nn/: delaunay.c  delaunay.cpp  hash.c  hash.cpp  istack.c  istack.cpp  lpi.c  lpi.cpp  minell.c  minell.cpp  nnai.c  nnai.cpp  nncommon-vulnerable.c  nncommon-vulnerable.cpp  nncommon.c  nncommon.cpp  nnpi.c  nnpi.cpp  performNNInterp.c  performNNInterp.cpp  preader.c  preader.cpp  triangle.c  triangle.cpp
src/spd/: SPDARADecomposedDatFileImporter.cpp  SPDASCIIMultiLineReader.cpp  SPDApplyElevationChange.cpp  SPDCalcFileStats.cpp  SPDCalcMetrics.cpp  SPDClassifyPts.cpp  SPDConvertFormats.cpp  SPDCopyRemovingClassificationProcessor.cpp  SPDCreateVerticalProfiles.cpp  SPDDataExporter.cpp  SPDDecomposeWaveforms.cpp  SPDDecomposedCOOFileImporter.cpp  SPDDecomposedDatFileImporter.cpp  SPDDefineClassesFromImg.cpp  SPDDefinePulseHeights.cpp  SPDDefineRGBValues.cpp  SPDException.cpp  SPDExportAsReadUnGridded.cpp  SPDExportAsTiles.cpp  SPDExportProcessorSubset.cpp  SPDExtractReturns.cpp  SPDFile.cpp  SPDFileIncrementalReader.cpp  SPDFileReader.cpp  SPDFileUtilities.cpp  SPDFileWriter.cpp  SPDFullWaveformDatFileImporter.cpp  SPDGenBinaryMask.cpp  SPDGeneralASCIIFileWriter.cpp  SPDGenerateTiles.cpp  SPDGridData.cpp  SPDIOException.cpp  SPDIOFactory.cpp  SPDIOUtils.cpp  SPDImageException.cpp  SPDImageUtils.cpp  SPDImportSALCAData2SPD.cpp  SPDLASFileExporter.cpp  SPDLASFileImporter.cpp  SPDLineParserASCII.cpp  (+32 more)
src/tps/: README.txt  spline.cpp
tools/: spd-config.in  spdbatchgen.py.in  spdbuildmergecmd.py.in  spdbuildtileextractcmd.py.in  spdcmdgen.py.in
(+1 files in other folders)
